@@ -1943,7 +1943,8 @@ dnl Function checks
 dnl
 AC_FUNC_GETGROUPS
 AC_CHECK_FUNCS(strrchr sysconf tzset strftime initgroups getgroups fstat \
-	       regcomp setlocale getaddrinfo mbr_check_membership setrlimit64)
+	       regcomp setlocale nl_langinfo getaddrinfo mbr_check_membership \
+	       setrlimit64)
 AC_CHECK_FUNCS(getline, [], [
     AC_LIBOBJ(getline)
     AC_CHECK_FUNCS(fgetln)
